# eqmq

./: Cargo.toml  README.md  eqmq.json
src/: cli.rs  config.rs  consumer.rs  main.rs  publisher.rs
