[package]
name = "eqmq"
version = "0.0.1"
authors = ["Vasily Kondratyev <wassily.kondratiev@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.39"
futures-lite = "1.11.3"
lapin = "1.6.8"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.64"
structopt = { version = "0.3.21", features = ["color"] }
tokio = { version = "1.4.0", features = ["macros", "rt-multi-thread"] }
tokio-amqp = "1.0.0"
tracing = "0.1.25"
tracing-subscriber = "0.2.17"
